--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,14 @@
             <artifactId>javafx-fxml</artifactId>
             <version>17</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
